# LameUtil

./: build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/pglvee/lameutil/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/pglvee/lameutil/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/pglvee/lameutil/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
lib-mp3lame/: build.gradle
lib-mp3lame/src/main/: AndroidManifest.xml
lib-mp3lame/src/main/java/com/pglvee/lib_mp3lame/: LameUtil.java
lib-mp3lame/src/main/jni/: CMakeLists.txt  id3tag.c  lame.h  libmp3lame.cpp  machine.h
